--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:fix": "eslint --ext=js,jsx . --fix"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "axios": "^0.24.0",
+    "clsx": "^1.1.1",
     "next": "12.0.7",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.0",
