--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.34.7",
     "react-slick": "^0.28.1",
+    "sharp": "^0.29.3",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^7.0.1"
   },
